Fix: links is sidebar should not break on new line.

--- a/themes/pagehop/source/css/_partial/sidebar.styl
+++ b/themes/pagehop/source/css/_partial/sidebar.styl
@@ -32,6 +32,7 @@
   padding: 5px 15px
   border-left: 2px solid color-border
   margin-left: 3px
+  white-space: nowrap
   &.current, &.current:hover
     color: color-blue
     font-weight: bold
